force-app/main/default/objects/LogInterface__c/LogInterface__c.object-meta.xml
<CustomObject>
    <label>Log Interface</label>
    <nameField>
        <displayFormat>LI - {00000000}</displayFormat>
        <label>Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Interfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>