force-app/main/default/objects/LogInterface__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Data</label>
    <type>DateTime</type>
</CustomField>