force-app/main/default/objects/LogInterface__c/fields/FailQuantity__c.field-meta.xml
<CustomField>
    <fullName>FailQuantity__c</fullName>
    <label>Qtde. Falhas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>