force-app/main/default/objects/LogInterface__c/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <label>Interface/Classe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>