force-app/main/default/objects/LogInterface__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF (  FailQuantity__c == 0, &apos;Sucesso&apos;, IF (  SuccessQuantity__c == 0, &apos;Erro&apos;, &apos;Parcial&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>