force-app/main/default/objects/LogInterface__c/fields/SuccessQuantity__c.field-meta.xml
<CustomField>
    <fullName>SuccessQuantity__c</fullName>
    <label>Qtde. Sucessos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>