force-app/main/default/objects/LogInterface__c/fields/TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantity__c</fullName>
    <formula>FailQuantity__c + SuccessQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qtde. Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>