force-app/main/default/objects/LogInterface__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ação realizada por</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LogInterfaces</relationshipName>
    <type>Lookup</type>
</CustomField>